bugfix(app) show scrollbar

--- a/wp-content/themes/skelvy/assets/styles/_body.scss
+++ b/wp-content/themes/skelvy/assets/styles/_body.scss
@@ -24,8 +24,3 @@ body {
   background-color: theme-color('primary');
   color: $white;
 }
-
-::-webkit-scrollbar {
-  display: none;
-  width: 0;
-}
